[workspace]
members = [
  "archives/th19netdelayemulate",
  "archives/th19onlinevsfix",
  "archives/th19padlight",
  "archives/th19replayplayer",
  "archives/th19replayplayer-lib",
  "archives/th19replayrecorder",
  "archives/th19savesettingsseparately",
  "archives/th19seed",
  "junowen",
  "junowen-lib",
  "junowen-server",
  "th19loader",
]
default-members = ["junowen"]
resolver = "2"

[workspace.package]
version = "0.9.0"
authors = ["Progre"]
license = "GPL-3.0"

[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
junowen-lib = { path = "./junowen-lib" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "local-time"
] }
