[workspace]
members = [
  "archives/th19netdelayemulate",
  "archives/th19onlinevsfix",
  "archives/th19padlight",
  "archives/th19replayplayer",
  "archives/th19replayplayer-lib",
  "archives/th19replayrecorder",
  "archives/th19savesettingsseparately",
  "archives/th19seed",
  "junowen",
  "junowen-lib",
  "junowen-server",
  "th19loader",
]
default-members = ["junowen"]
resolver = "2"

[workspace.package]
version = "1.0.0"
authors = ["Progre"]
license = "GPL-3.0"

[workspace.dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
junowen-lib = { path = "./junowen-lib" }
static_vcruntime = "2.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "local-time"
] }
windows = { version = "0.56.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D9",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }
