[package]
name = "junowen-hook"
version.workspace = true
edition = "2021"

[lib]
crate-type = ['cdylib']

[dependencies]
anyhow.workspace = true
base64 = "0.21.4"
bytes = "1.5.0"
flate2 = "1.0.27"
getset = "0.1.2"
junowen-lib.workspace = true
rmp-serde = "1.1.2"
serde = "1.0.188"
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["rt"] }
webrtc = "0.9.0"
windows = { version = "0.51.1", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D9",
  "Win32_Graphics_Gdi",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
