[package]
name = "junowen-lib"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1.73"
base64 = "0.21.4"
bytes = "1.5.0"
clipboard-win = "4.5.0"
flate2 = "1.0.27"
getset = "0.1.2"
regex = "1.9.5"
rmp-serde = "1.1.2"
serde = "1.0.188"
sys-locale = "0.3.1"
tokio = "1.32.0"
toml = "0.8.0"
tracing = "0.1.37"
webrtc = "0.9.0"
windows = { version = "0.51.1", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D9",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
] }
