[package]
name = "junowen-lib"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1.73"
base64 = "0.21.4"
bytes = "1.5.0"
clipboard-win = "5.0.0"
derivative = "2.2.0"
derive-new = "0.6.0"
flagset = "0.4.4"
flate2 = "1.0.27"
getset = "0.1.2"
http = "^0.2.11"
num_enum = "0.7.1"
regex = "1.9.5"
rmp-serde = "1.1.2"
serde = "1.0.188"
serde_json = "1.0.108"
sha3 = "0.10.8"
sys-locale = "0.3.1"
thiserror = "1.0.49"
tokio = "1.32.0"
toml = "0.8.0"
tracing.workspace = true
uuid = "1.5.0"
webrtc = "0.9.0"
windows.workspace = true
