[package]
name = "junowen-lib"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64 = "0.22.1"
bytes.workspace = true
clipboard-win.workspace = true
derivative = "2.2.0"
derive-new = "0.6.0"
flagset = "0.4.6"
flate2 = "1.0.32"
getset = "0.1.2"
hex-literal = "0.4.1"
http = "1.1.0"
num_enum = "0.7.3"
regex = "1.10.6"
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
sha3 = "0.10.8"
sys-locale = "0.3.1"
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
uuid = "1.10.0"
webrtc = "0.11.0"
windows.workspace = true
