[package]
name = "junowen-server"
edition = "2021"
version = "0.9.0"
authors.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow.workspace = true
async-trait.workspace = true
aws-config = "*"
aws-sdk-dynamodb = "*"
base_custom = "0.2.0"
chrono = "0.4.31"
derive-new = "0.6.0"
getset = "0.1.2"
junowen-lib.workspace = true
lambda_http = "0.11.1"
once_cell = "1.18.0"
regex = "1.10.2"
serde.workspace = true
serde_dynamo = { version = "4.2.8", features = ["aws-sdk-dynamodb+0_34"] }
serde_json.workspace = true
time = "0.3.29"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding = "2.1.3"
uuid = "1.5.0"

[target.x86_64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }
