[package]
name = "junowen"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "th19_junowen"
crate-type = ['cdylib']

[dependencies]
anyhow.workspace = true
async-trait = "0.1.74"
bytes = "1.5.0"
clipboard-win = "5.0.0"
derive-new = "0.6.0"
getset = "0.1.2"
junowen-lib.workspace = true
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["json"] }
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
thiserror = "1.0.50"
time = { version = "0.3.29", features = [] }
tokio = { version = "1.32.0", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "time"
] }
toml = "0.8.0"
tracing.workspace = true
tracing-appender = "0.2.2"
tracing-subscriber.workspace = true
webrtc = "0.9.0"
windows = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D9",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Shell",
] }
