[package]
name = "junowen"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "th19_junowen"
crate-type = ['cdylib']

[features]
simple-dll-injection = []

[build-dependencies]
static_vcruntime.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1.74"
bytes = "1.5.0"
clipboard-win = "5.0.0"
derive-new = "0.6.0"
getset = "0.1.2"
junowen-lib.workspace = true
once_cell = "1.18.0"
reqwest = { version = "0.12.4", features = ["json"] }
rmp-serde = "1.1.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
sys-locale = "0.3.1"
thiserror = "1.0.50"
time = { version = "0.3.29", features = [] }
tokio = { version = "1.32.0", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "time"
] }
toml = "0.8.12"
toml_edit = "0.22.12"
tracing.workspace = true
tracing-appender = "0.2.2"
tracing-subscriber.workspace = true
urlencoding = "2.1.3"
windows.workspace = true
