[package]
name = "junowen"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "th19_junowen"
crate-type = ['cdylib']

[features]
simple-dll-injection = []

[build-dependencies]
static_vcruntime.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
clipboard-win.workspace = true
derive-new = "0.6.0"
getset = "0.1.2"
junowen-lib.workspace = true
once_cell = "1.19.0"
reqwest = { version = "0.12.7", features = ["json"] }
rmp-serde.workspace = true
serde.workspace = true
serde_json.workspace = true
sys-locale = "0.3.1"
thiserror.workspace = true
time = { version = "0.3.36", features = [] }
tokio.workspace = true
toml.workspace = true
toml_edit = "0.22.20"
tracing.workspace = true
tracing-appender = "0.2.3"
tracing-subscriber.workspace = true
urlencoding = "2.1.3"
windows.workspace = true
