[package]
name = "th19loader"
version.workspace = true
edition = "2021"

[lib]
crate-type = ['cdylib']
name = "d3d9"

[dependencies]
anyhow.workspace = true
junowen = { path = "../junowen" }
sha3 = "0.10.8"
windows = { version = "0.51.1", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D9",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
