[package]
name = "th19loader"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ['cdylib']
name = "d3d9"

[build-dependencies]
winres = "0.1"

[dependencies]
anyhow.workspace = true
junowen-lib = { path = "../junowen-lib" }
windows = { version = "0.51.1", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D9",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }

[package.metadata.winres]
LegalCopyright = "© Progre"
ProductName = "th19loader"
FileDescription = "https://github.com/progre/junowen/"
