[package]
name = "th19loader"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ['cdylib']
name = "d3d9"

[build-dependencies]
static_vcruntime.workspace = true
winres = "0.1"

[dependencies]
anyhow.workspace = true
junowen-lib = { path = "../junowen-lib" }
windows.workspace = true

[package.metadata.winres]
LegalCopyright = "© Progre"
ProductName = "th19loader"
FileDescription = "https://github.com/progre/junowen/"
