[package]
name = "th19replayplayer"
version.workspace = true
edition = "2021"

[lib]
name = "th19replayplayer_hook"
crate-type = ['cdylib']

[dependencies]
anyhow.workspace = true
bytes = "1.5.0"
interprocess = "1.2.1"
junowen-lib = { path = "../junowen-lib" }
th19replayplayer-lib = { path = "../th19replayplayer-lib" }
windows = "0.51.1"
