[package]
name = "th19replayrecorder"
version.workspace = true
edition = "2021"

[lib]
crate-type = ['cdylib']
name = "th19_replayrecorder"

[dependencies]
anyhow.workspace = true
bytes = "1.5.0"
chrono = "0.4.30"
junowen-lib = { path = "../junowen-lib" }
th19replayplayer = { path = "../th19replayplayer" }
windows = { version = "0.51.1", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D9",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
] }
