[package]
name = "th19padlight"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "th19padlight_hook"
crate-type = ['cdylib']

[dependencies]
anyhow.workspace = true
junowen-lib.workspace = true
windows = { version = "0.52.0", features = [
  "Win32_Foundation",
  "Win32_Graphics_Direct3D9",
  "Win32_Graphics_Gdi",
  "Win32_System_Console",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
] }
