[package]
name = "th19replayplayer"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "th19replayplayer_hook"
crate-type = ['cdylib']

[dependencies]
anyhow.workspace = true
bytes = "1.5.0"
interprocess = "1.2.1"
junowen-lib.workspace = true
th19replayplayer-lib = { path = "../th19replayplayer-lib" }
windows = "0.51.1"
